tests/functional/lang/eval-fail-match-1.err.exp
error:
       … while calling the 'match' builtin
         at /pwd/lang/eval-fail-match-1.nix:1:1:
            1| builtins.match 1 { }
             | ^
            2|

       … while evaluating the first argument passed to builtins.match

       error: expected a string but found an integer: 1
